# citewright

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/citewright/: __init__.py  aggregator.py  ai_analyzer.py  bibtex_manager.py  cli.py  media_renamer.py  pdf_renamer.py
src/citewright/api/: __init__.py  clients.py
src/citewright/utils/: __init__.py  config.py  extractors.py
