[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "citewright"
version = "0.1.1"
description = "Intelligent academic paper and media renaming tool with multi-source metadata extraction"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Luke Steuber", email = "luke@dr.eamer.dev" }
]
keywords = [
    "academic",
    "papers",
    "pdf",
    "rename",
    "metadata",
    "bibtex",
    "arxiv",
    "semantic-scholar",
    "doi"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing",
    "Topic :: Utilities"
]
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "pymupdf>=1.23.0",
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=1.0.0",
    "bibtexparser>=1.4.0",
    "python-docx>=1.0.0",
]

[project.optional-dependencies]
ai = [
    "openai>=1.0.0",
]
media = [
    "opencv-python-headless>=4.8.0",
    "pillow>=10.0.0",
]
all = [
    "citewright[ai,media]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[project.scripts]
citewright = "citewright.cli:main"

[project.urls]
Homepage = "https://github.com/lukeslp/citewright"
Repository = "https://github.com/lukeslp/citewright"
Issues = "https://github.com/lukeslp/citewright/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/citewright"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
